[package]
name = "queue-bench"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.69"
async-trait = "0.1.65"
futures = "0.3.26"
rsmq_async = "5.1.2"
serde = "1.0.152"
serde_json = "1.0.94"
sqlx = { version = "0.6.2", features = [
    "postgres",
    "runtime-tokio-rustls",
    "json",
] }

[dev-dependencies]
criterion = { version = "0.4", features = ["async_tokio"] }
tokio = "1.26.0"
uuid = "1.3.0"
rand = "0.8.5"

[[bench]]
name = "local_bench"
harness = false
